--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        compile fileTree(dir: '../libs', include: '*.jar')
     }
 }
 
@@ -65,6 +66,7 @@ project(":core") {
         compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.0"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        compile fileTree(dir: '../libs', include: '*.jar')
     }
 }
 
